Estilos completos para index.html con animaciones, y recursos audiovisuales e imagenes

--- a/gymbaland/index.html
+++ b/gymbaland/index.html
@@ -6,70 +6,183 @@
     <title>Gymbaland</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/1c3a594d0c.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
     <header>
-        <nav>
-            <ul>
-                <li><a href="clases.html">Clases</a></li>
+        <!-- Added a class to the nav element for better targeting -->
+        <nav class="main-nav">
+            <div class="logo">
+                <a>GYM<i class="fas fa-dumbbell"></i>BALAND</a>       
+            </div>
+            <label for="menu-toggle" class="menu-icon"><i class="fas fa-bars"></i></label>
+            <input type="checkbox" id="menu-toggle">
+            <!-- Ensure submenu is properly nested and visible -->
+            <ul class="menu">
+                <li>
+                    <a href="clases.html">Clases</a>
+                    <ul class="submenu">
+                        <li><a href="crossfit.html">CrossFit</a></li>
+                        <li><a href="spinning.html">Spinning</a></li>
+                        <li><a href="zumba.html">Zumba</a></li>
+                        <li><a href="pilates.html">Pilates</a></li>
+                        <li><a href="entrenamiento-funcional.html">Entrenamiento Funcional</a></li>
+                        <li><a href="entrenamiento-personalizado.html">Entrenamiento Personalizado</a></li>
+                    </ul>
+                </li>
                 <li><a href="entrenadores.html">Entrenadores</a></li>
                 <li><a href="precios.html">Precios</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="hero">
+    <section class="hero">
         <video autoplay muted loop>
-            <source src="video/entrenamiento.mp4" type="video/mp4">
+            <source src="videos/entrenamiento.mp4" type="video/mp4">
             Tu navegador no soporta videos HTML5.
         </video>
         <div class="overlay">
             <h1>¡Gymbaland te hará más fuerte, más saludable y más decidido a alcanzar tus metas!</h1>
+            <a href="blog.html" class="cta-btn">Explora nuestro Blog de Fitness</a>
         </div>
-        <a href="blog.html" class="cta-btn">Explora nuestro Blog de Fitness</a>
-    </section>
+            </section>
 
-    <section id="clases">
-        <h2>Nuestras Clases</h2>
+    <section class="clases">
+        <h2 class="Titulo-cards">Nuestras Clases</h2>
         <div class="tarjetas">
-            <div class="tarjeta">Clases de CrossFit</div>
-            <div class="tarjeta">Clases de Yoga</div>
-            <div class="tarjeta">Clases de Spinning</div>
+            <div class="tarjeta">
+                <i class="fas fa-dumbbell fa-2x"></i>
+                <img src="img/funcional.jpg" alt="Entrenamiento funcional">
+                <h3>Clases de Entrenamiento funcional</h3>
+            </div>
+            <div class="tarjeta">
+                <i class="fas fa-user-friends fa-2x"></i>
+                <img src="img/personalizado.jpg" alt="Entrenamiento Personalizado">
+                <h3>Clases de Entrenamiento Personalizado</h3>
+            </div>
+            <div class="tarjeta">
+                <i class="fas fa-bicycle fa-2x"></i>
+                <img src="img/spinning.jpg" alt="Spinning">
+                <h3>Clases de Spinning</h3>
+            </div>
+            <div class="tarjeta">
+                <i class="fas fa-music fa-2x"></i>
+                <img src="img/zumba.jpg" alt="Zumba">
+                <h3>Clases de Zumba</h3>
+            </div>
+            <div class="tarjeta">
+                <i class="fas fa-running fa-2x"></i>
+                <img src="img/crossfit.jpg" alt="CrossFit">
+                <h3>Clases de CrossFit</h3>
+            </div>
+            <div class="tarjeta">
+                <i class="fas fa-balance-scale fa-2x"></i>
+                <img src="img/pilates.jpg" alt="Pilates">
+                <h3>Clases de Pilates</h3>
+            </div>
         </div>
     </section>
 
-    <section id="contador">
-        <h2>500+ Socios Satisfechos</h2>
+    <section class="contador">
+        <div class="contador-container">
+            <div class="contador-item">
+                <div class="numero"></div>
+                <span class="simbolo">+</span>
+                <h3>Socios Satisfechos</h3>
+            </div>
+            <div class="contador-item">
+                <div class="numero"></div>
+                <span class="simbolo">+</span>
+                <h3>Entrenadores Certificados</h3>
+            </div>
+            <div class="contador-item">
+                <div class="numero"></div>
+                <span class="simbolo">m²</span>
+                <h3>Área de Entrenamiento</h3>
+            </div>
+        </div>
     </section>
 
-    <section id="testimonios">
-        <h2>Testimonios</h2>
+    <section class="testimonios">
+        <h2 class="Titulo-cards">Testimonios</h2>
         <div class="carrusel">
-            <div class="testimonio">"El mejor gimnasio de la ciudad."</div>
-            <div class="testimonio">"Entrenadores increíbles y clases motivadoras."</div>
-            <div class="testimonio">"Los resultados son reales."</div>
+            <div class="testimonio">
+                <div class="perfil-testimonio">
+                    <img src="img/perfil1.jpg" alt="Perfil 1">
+                    <h3>Paquito Lover</h3>
+                    <span class="profesion">Influencer Fitness</span>
+                </div>
+                <p class="texto-testimonio">"#VibeCheck ¡Gymbaland es la definición de high-tech fitness! 🔥 Los equipos son de última generación y los entrenadores son increíbles. ¡Mi lugar favorito para entrenar!"</p>
+            </div>
+            <div class="testimonio">
+                <div class="perfil-testimonio">
+                    <img src="img/perfil2.jpg" alt="Perfil 2">
+                    <h3>Carlos Martínez</h3>
+                    <span class="profesion">Atleta Amateur</span>
+                </div>
+                <p class="texto-testimonio">"La vibra aquí es única #GymbalandVibes. El ambiente high-tech mezclado con el espíritu deportivo tradicional crea el balance perfecto. ¡Los resultados hablan por sí solos! 💪"</p>
+            </div>
+            <div class="testimonio">
+                <div class="perfil-testimonio">
+                    <img src="img/perfil3.jpg" alt="Perfil 3">
+                    <h3>Laura Pérez</h3>
+                    <span class="profesion">Entusiasta del Fitness</span>
+                </div>
+                <p class="texto-testimonio">"#FitLife en su máxima expresión. El ambiente high-tech y la comunidad increíble hacen que cada entrenamiento sea una experiencia única. ¡No cambiaría Gymbaland por nada! ✨"</p>
+            </div>
+            <div class="testimonio">
+                <div class="perfil-testimonio">
+                    <img src="img/perfil4.jpg" alt="Perfil 4">
+                    <h3>Diego Rodríguez</h3>
+                    <span class="profesion">Coach Personal</span>
+                </div>
+                <p class="texto-testimonio">"Como profesional del fitness, puedo decir que la tecnología y el equipamiento high-tech de Gymbaland están a otro nivel. #FitnessGoals cumplidos aquí 🎯"</p>
+            </div>
+            <div class="testimonio">
+                <div class="perfil-testimonio">
+                    <img src="img/perfil5.jpg" alt="Perfil 5">
+                    <h3>María Torres</h3>
+                    <span class="profesion">Yogui Profesional</span>
+                </div>
+                <p class="texto-testimonio">"El equilibrio perfecto entre tecnología y bienestar. #VibeCheck positivo siempre en Gymbaland. ¡El mejor lugar para alcanzar tus metas fitness! 🧘‍♀️"</p>
+            </div>
         </div>
     </section>
 
     <footer>
+<div class="footer-container">
+            <div class="footer-section">
         <form action="#" method="post">
-            <h3>Suscríbete a nuestro newsletter</h3>
+            <h3><i class="far fa-envelope"></i> Suscríbete a nuestro newsletter</h3>
             <input type="email" name="email" placeholder="Ingresa tu correo">
             <button type="submit">Suscribirse</button>
         </form>
+</div>
+            
+            <div class="footer-section">
         <div class="redes-sociales">
-            <a href="#">Facebook</a>
-            <a href="#">Instagram</a>
-            <a href="#">Twitter</a>
+            <a href="#"><i class="fab fa-facebook"></i> Facebook</a>
+            <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+            <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
         </div>
-        <div>
-            <a href="contacto.html">Contactanos para mas informacion sobre GymBaland</a> <!-- Enlace directo al formulario -->
+            <div class="contact-btn">
+            <a href="contacto.html"><i class="fas fa-envelope"></i> Contactanos para mas informacion</a>
+</div>
         </div>
-        <div class="mapa" <a>Nuestra Ubicacion:</a>>
+
+            <div class="footer-section">
+                <div class="mapa">
+            <span class="mapa-title"><i class="fas fa-map-marker-alt"></i> Nuestra Ubicación:</span>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.835434617582!2d-58.37723248530711!3d-34.60552898045159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccadd1d39f9eb%3A0xa8ae66542b70b473!2sPlaza%20de%20Mayo!5e0!3m2!1ses!2sar!4v1652111528727!5m2!1ses!2sar" 
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    allowfullscreen="" loading="lazy"></iframe>
+</div>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2024 Gymbaland. Todos los derechos reservados | Desarrollado por <a href="#">Martin Alejandro Bonari</a></p>
         </div>
     </footer>
+    
 </body>
 </html>
