Se agrego estructura de clases recursos y estilos

--- a/gymbaland/index.html
+++ b/gymbaland/index.html
@@ -23,12 +23,12 @@
                 <li>
                     <a href="clases.html">Clases</a>
                     <ul class="submenu">
-                        <li><a href="crossfit.html">CrossFit</a></li>
-                        <li><a href="spinning.html">Spinning</a></li>
-                        <li><a href="zumba.html">Zumba</a></li>
-                        <li><a href="pilates.html">Pilates</a></li>
-                        <li><a href="entrenamiento-funcional.html">Entrenamiento Funcional</a></li>
-                        <li><a href="entrenamiento-personalizado.html">Entrenamiento Personalizado</a></li>
+                        <li><a href="#crossfit">CrossFit</a></li>
+                        <li><a href="#spinning">Spinning</a></li>
+                        <li><a href="#zumba">Zumba</a></li>
+                        <li><a href="#pilates">Pilates</a></li>
+                        <li><a href="#entrenamiento-funcional">Entrenamiento Funcional</a></li>
+                        <li><a href="#entrenamiento-personalizado">Entrenamiento Personalizado</a></li>
                     </ul>
                 </li>
                 <li><a href="entrenadores.html">Entrenadores</a></li>
@@ -56,27 +56,27 @@
                 <img src="img/funcional.jpg" alt="Entrenamiento funcional">
                 <h3>Clases de Entrenamiento funcional</h3>
             </div>
-            <div class="tarjeta">
+            <div class="tarjeta" id="entrenamiento-personalizado">
                 <i class="fas fa-user-friends fa-2x"></i>
                 <img src="img/personalizado.jpg" alt="Entrenamiento Personalizado">
                 <h3>Clases de Entrenamiento Personalizado</h3>
             </div>
-            <div class="tarjeta">
+            <div class="tarjeta" id="spinning">
                 <i class="fas fa-bicycle fa-2x"></i>
                 <img src="img/spinning.jpg" alt="Spinning">
                 <h3>Clases de Spinning</h3>
             </div>
-            <div class="tarjeta">
+            <div class="tarjeta" id="zumba">
                 <i class="fas fa-music fa-2x"></i>
                 <img src="img/zumba.jpg" alt="Zumba">
                 <h3>Clases de Zumba</h3>
             </div>
-            <div class="tarjeta">
+            <div class="tarjeta" id="crossfit">
                 <i class="fas fa-running fa-2x"></i>
                 <img src="img/crossfit.jpg" alt="CrossFit">
                 <h3>Clases de CrossFit</h3>
             </div>
-            <div class="tarjeta">
+            <div class="tarjeta" id="pilates">
                 <i class="fas fa-balance-scale fa-2x"></i>
                 <img src="img/pilates.jpg" alt="Pilates">
                 <h3>Clases de Pilates</h3>
@@ -151,33 +151,31 @@
     </section>
 
     <footer>
-<div class="footer-container">
+        <div class="footer-container">
             <div class="footer-section">
-        <form action="#" method="post">
-            <h3><i class="far fa-envelope"></i> Suscríbete a nuestro newsletter</h3>
-            <input type="email" name="email" placeholder="Ingresa tu correo">
-            <button type="submit">Suscribirse</button>
-        </form>
-</div>
-            
-            <div class="footer-section">
-        <div class="redes-sociales">
-            <a href="#"><i class="fab fa-facebook"></i> Facebook</a>
-            <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
-            <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
-        </div>
-            <div class="contact-btn">
-            <a href="contacto.html"><i class="fas fa-envelope"></i> Contactanos para mas informacion</a>
-</div>
-        </div>
-
-            <div class="footer-section">
-                <div class="mapa">
-            <span class="mapa-title"><i class="fas fa-map-marker-alt"></i> Nuestra Ubicación:</span>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.835434617582!2d-58.37723248530711!3d-34.60552898045159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccadd1d39f9eb%3A0xa8ae66542b70b473!2sPlaza%20de%20Mayo!5e0!3m2!1ses!2sar!4v1652111528727!5m2!1ses!2sar" 
-                    allowfullscreen="" loading="lazy"></iframe>
-</div>
-            </div>
+                <form action="#" method="post">
+                    <h3><i class="far fa-envelope"></i> Suscríbete a nuestro newsletter</h3>
+                    <input type="email" name="email" placeholder="Ingresa tu correo">
+                    <button type="submit">Suscribirse</button>
+                </form>
+            </div>      
+                <div class="footer-section">
+                    <div class="redes-sociales">
+                        <a href="#"><i class="fab fa-facebook"></i> Facebook</a>
+                        <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+                        <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
+                    </div>
+                    <div class="contact-btn">
+                        <a href="contacto.html"><i class="fas fa-envelope"></i> Contactanos para mas informacion</a>
+                    </div>
+                </div>
+                    <div class="footer-section">
+                        <div class="mapa">
+                            <span class="mapa-title"><i class="fas fa-map-marker-alt"></i> Nuestra Ubicación:</span>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.835434617582!2d-58.37723248530711!3d-34.60552898045159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccadd1d39f9eb%3A0xa8ae66542b70b473!2sPlaza%20de%20Mayo!5e0!3m2!1ses!2sar!4v1652111528727!5m2!1ses!2sar" 
+                                    allowfullscreen="" loading="lazy"></iframe>
+                        </div>
+                    </div>
         </div>
         <div class="copyright">
             <p>&copy; 2024 Gymbaland. Todos los derechos reservados | Desarrollado por <a href="#">Martin Alejandro Bonari</a></p>
