Se agrega recursos de entrenadores y responsividad de paginas

--- a/clases.html
+++ b/clases.html
@@ -16,11 +16,17 @@
             <div class="logo"> 
                 <a>GYM<i class="fas fa-dumbbell"></i>BALAND</a>
             </div>
+            <!-- Agregado: Botón menú móvil -->
+            <label for="menu-toggle" class="menu-icon">
+                <i class="fas fa-bars"></i>
+            </label>
+            <input type="checkbox" id="menu-toggle" class="menu-toggle">
+            <!-- Menú principal -->
             <ul class="menu">
                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="entrenadores.html">Entrenadores</a></li>
-                <li><a href="#crossfit">Precios</a></li>
-                <li><a href="#pilates">Blog</a></li>
+                <li><a href="precios.html">Precios</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
     </header>
